# co2_eor

./: .gitignore  README.md  l1EPR_timings.txt  main.py  mainv2.py  node.py  pipeline.py  pipelineV2.py  pyproject.toml  test_3wellpad1.py  test_3wellpad3.py  test_EOS.py  test_flowsheet.py  test_flowsheet2.py  test_flowsheet3V2.py  test_node.py  test_pipeline.py  test_pipelineV2.py  test_wellpad.py  wellpad.py
co2_eor/: SSLW.py  __init__.py  mixer.py  node.py  pipeline.py  splitter.py  util_funcs.py  wellpad.py
co2_eor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
co2_eor/flowsheets/: flowsheet5 sweep.py  flowsheet5.py  flowsheet6.py
co2_eor/flowsheets/deprecated/: flowsheet3.py  flowsheet4.py  flowsheet4_sub3.py
co2_eor/tests/: flowsheet1.py  flowsheet2.py  flowsheet3.py  flowsheet4.py  flowsheet4_sub2.py  kwargs_test.py  test_EOS.py  test_mixer.py  test_node.py  test_pipeline.py  test_pipelineV2.py  test_wellpadV2.py
co2_eor/tests/deprecated/: test_wellpad.py
co2_eor/tests/flowsheets/: flowsheet4_sub1.py  flowsheet5.py
